--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+2010-12-16
+Version 1.3.7
+Added delegate requirement in HTTPstreaming to fix error "uninitialized constant S3sync::SimpleDelegator"
+
 2010-11-29
 Version 1.3.5
 able to set Content-Encoding with --gzip option
